# calendar

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  calendar.pro
database/: calendar.db  calendar.db-journal  first_request.sql
inc/: dbmanager.h  event.h  messageTypes.h  myServer.h  person.h  sql.h  sqlerror.h
src/: dbmanager.cpp  dbmanager.h  event.cpp  main.cpp  myServer.cpp  person.cpp  person.h  sql.cpp  sqlerror.cpp
